--- a/plugins/PrivacyManager/lang/en.json
+++ b/plugins/PrivacyManager/lang/en.json
@@ -40,6 +40,22 @@
         "AskForConsentStep4DescB": "B) if you use your own consent tool to remember the consent",
         "AskForConsentStep4DescBDesc": "When the user has expressed she or he no longer gives consent, you shall not call the following method anymore:",
         "AskForConsentStepNotes": "Notes:",
+        "AnonymizeSites": "Anonymize the data of this site(s)",
+        "AnonymizeRowDataFrom": "Anonymize all raw data starting from:",
+        "AnonymizeRowDataTo": "Anonymize all raw data up to:",
+        "AnonymizeIp": "Anonymize IP",
+        "AnonymizeIpHelp": "This action cannot be undone. If enabled, for all visits during this duration the IP will be anonymized by at least 2 bytes, for example '192.168.xxx.xxx'. If you have currently configured to anonymize by 3 bytes, then this setting will be respected and all IPs will be anonymized by 3 bytes.",
+        "AnonymizeLocation": "Anonymize Location",
+        "AnonymizeLocationHelp": "This action cannot be undone. Re-evaluates the location based on the anonymized IP (at least 2 bytes of the IP will be anonymized).",
+        "AnonymizeUserId": "Replace User ID with a pseudonym",
+        "AnonymizeUserIdHelp": "When you enable this option, the User ID will be replaced by a pseudonym to avoid directly storing and displaying personally identifiable information such as an email address. In technical terms: given your User ID, Matomo will process the User ID pseudonym using a salted hash function.<br/><br/><em>Note: replacing with a pseudonym is not the same as anonymisation. In GDPR terms: the User ID pseudonym still counts as personal data. The original User ID could still be identified if certain additional information is available (which only Matomo and your data processor has access to).</em>",
+        "AnonymizeProcessInfo": "This action may take a long time and will therefore not be executed right away. You will be able to follow the current state of the process below. The anonymization should typically start within one hour.",
+        "AnonymizeDataNow": "Anonymize past data for the selected site and time",
+        "AnonymizeDataConfirm": "Are you sure you want to anonymize the data for the selected website(s) and time range? This action cannot be undone, data may be deleted as requested, and this process may take a long time.",
+        "UnsetVisitColumns": "Unset visit columns",
+        "UnsetVisitColumnsHelp": "This action cannot be undone. A list of database columns in scope visit that you want to unset. Each value for that column will be set to its default value. Please note that if the same column exists in scope 'conversion', then this column will be deleted as well",
+        "UnsetActionColumns": "Unset action columns",
+        "UnsetActionColumnsHelp": "This action cannot be undone. A list of database columns in scope action that you want to unset. Each value for that column will be set to its default value.",
         "AwarenessDocumentation": "Awareness & documentation",
         "AwarenessDocumentationIntro": "Inform your users clearly and transparently, and make your colleagues aware of the data being collected and how it is used:",
         "AwarenessDocumentationDesc1": "Inform your visitors through a clear privacy notice whenever you’re collecting personal data.",
