Makes gdpr tools directive translatable

--- a/plugins/PrivacyManager/lang/en.json
+++ b/plugins/PrivacyManager/lang/en.json
@@ -135,6 +135,27 @@
         "PurgingData": "Purging data...",
         "RecommendedForPrivacy": "Recommended for privacy",
         "ReportsDataSavedEstimate": "Database size",
+        "SearchForDataSubject": "Search for a data subject",
+        "FindDataSubjectsBy": "Find data subjects by",
+        "NoDataSubjectsFound": "No data subjects found",
+        "DeleteVisitsConfirm": "Are you sure you want to delete the selected visits? This action cannot be undone.",
+        "ResultTruncated": "More than %1$s results were found and the result was truncated to the first %1$s visits.",
+        "AddVisitorIdToSearch": "Click to add this visitorID to the search",
+        "AddVisitorIPToSearch": "Click to add this visitorIP to the search",
+        "AddUserIdToSearch": "Click to add this userID to the search",
+        "ExportSelectedVisits": "Export selected visits",
+        "DeleteSelectedVisits": "Delete selected visits",
+        "SelectWebsite": "Select a website",
+        "MatchingDataSubjects": "Matching data subjects",
+        "VisitsMatchedCriteria": "These visits match the selected criteria.",
+        "ExportingNote": "In case you are exporting the data to exercise the right of access, please make sure the selected visits are actually performed by the data subject you want to export the data for.",
+        "DeletionFromMatomoOnly": "Please also note that any data will be only deleted from the Matomo database but not from your webserver logs. Also note that if you re-import any historical data, for example from logs, that any previously deleted data may be imported again.",
+        "ResultIncludesAllVisits": "The found results include all visits without any time restriction and include today.",
+        "GdprToolsPageIntro1": "This page has been designed in order for you to exercise data subject rights.",
+        "GdprToolsPageIntro2": "Here you can exercise the rights of your users with our GDPR-friendly procedures:",
+        "GdprToolsPageIntroAccessRight": "the right of access to all of their data (and the right to data portability),",
+        "GdprToolsPageIntroEraseRight": "the right to erase some or all of their data (and the right to rectification).",
+        "GdprToolsOverviewHint": "In case you do not know what GDPR is, please refer to the %1$sGDPR overview%2$s.",
         "SaveSettingsBeforePurge": "You have changed the data deletion settings. Please save them before starting a purge.",
         "SeeAlsoOurOfficialGuidePrivacy": "See also our official guide: %1$sWeb Analytics Privacy%2$s",
         "SecurityProcedures": "Security procedures",
