--- a/plugins/CoreAdminHome/lang/fr.json
+++ b/plugins/CoreAdminHome/lang/fr.json
@@ -113,6 +113,9 @@
         "YouMayOptOut3": "Cela protégera votre vie privée, mais empêchera également le propriétaire d'apprendre de vos actions et de créer une meilleure expérience pour vous et les autres utilisateurs.",
         "UncheckToOptOut": "Décochez cette case pour être exclu(e).",
         "CheckToOptIn": "Cochez cette case pour ne plus être exclu(e).",
+        "OptOutErrorNoCookies": "La fonctionnalité de désactivation du suivi nécessite que les cookies soient autorisés.",
+        "OptOutErrorNotHttps": "La fonctionnalité de désactivation du suivi pourrait ne pas fonctionner car ce site n'a pas été chargé en HTTPS. Veuillez recharger la page pour vérifier que le statut de ce suivi a bien été changé.",
+        "OptOutErrorWindowOpen": "La fonctionnalité de désactivation du suivi pourrait ne pas marcher car il semble que la popup de désactivation a été bloquée. Veuillez recharger la page pour vérifier que le statut a bien été changé.",
         "MissingTrackingCodeEmailSubject": "Aucun trafic enregistré dans les statistiques Matomo pour %s, démarrez maintenant",
         "JsTrackingCodeMissingEmail1": "Il y a quelques jours vous avez ajouté le site web '%s' à votre Matomo. Nous venons de vérifier et il semble que votre Matomo n'aie pas enregistré de trafic pour ce site web.",
         "JsTrackingCodeMissingEmail2": "Pour commencer à suivre les données et obtenir des informations sur vos utilisateurs, vous devez configurer le suivi sur votre site Web ou votre application mobile. Pour les sites Web, intégrez simplement le code de suivi juste avant la balise %s.",
