--- a/plugins/CoreAdminHome/lang/pt.json
+++ b/plugins/CoreAdminHome/lang/pt.json
@@ -113,6 +113,9 @@
         "YouMayOptOut3": "Ao fazer isto irá proteger a sua privacidade, mas irá também impedir o proprietário do site de aprender com as suas ações e de criar uma melhor experiência para si e para outros utilizadores.",
         "UncheckToOptOut": "Desmarque esta caixa para deixar de participar.",
         "CheckToOptIn": "Marque esta caixa para participar.",
+        "OptOutErrorNoCookies": "A funcionalidade de exclusão do acompanhamento necessita de cookies para ser ativada.",
+        "OptOutErrorNotHttps": "A funcionalidade de exclusão do acompanhamento poderá não funcionar porque este site não foi carregado sobre HTTPS. Por favor, recarregue a página para verificar se o seu estado de exclusão foi alterado.",
+        "OptOutErrorWindowOpen": "A funcionalidade de exclusão do acompanhamento poderá não funcionar porque parece que o pop-up de exclusão foi bloqueado. Por favor, recarregue a página para verificar se o seu estado de exclusão foi alterado.",
         "MissingTrackingCodeEmailSubject": "Sem tráfego registado no Matomo Analytics para %s. Comece agora",
         "JsTrackingCodeMissingEmail1": "Já passaram alguns dias desde que adicionou o site '%s' ao seu Matomo Analytics. Acabámos de confirmar e parece que o seu Matomo não tem qualquer tráfego registado para este site.",
         "JsTrackingCodeMissingEmail2": "Para iniciar o acompanhamento de dados e obter conhecimentos sobre os seus utilizadores, é necessário configurar o processo de acompanhamento no seu site ou aplicação móvel. Para sites, basta incorporar o código de acompanhamento imediatamente antes da tag %s.",
