--- a/plugins/CoreAdminHome/lang/zh-cn.json
+++ b/plugins/CoreAdminHome/lang/zh-cn.json
@@ -113,6 +113,9 @@
         "YouMayOptOut3": "这样做可以保护您的隐私，但也会阻止所有者从您的行为中学习，并为您和其他用户创造更好的体验。",
         "UncheckToOptOut": "取消勾选此复选框以防止数据追踪",
         "CheckToOptIn": "勾选此复选框以接受数据追踪",
+        "OptOutErrorNoCookies": "跟踪退出功能需要启用Cookie。",
+        "OptOutErrorNotHttps": "跟踪退出功能可能无法使用，因为此站点未通过HTTPS加载。 请重新加载页面以检查您的退出状态是否已更改。",
+        "OptOutErrorWindowOpen": "跟踪退出功能可能无法正常运行，因为它似乎阻止了退出弹出窗口。 请重新加载页面以检查您的退出状态是否已更改。",
         "MissingTrackingCodeEmailSubject": "Matomo Analytics中没有记录%s的流量，现在开始使用",
         "JsTrackingCodeMissingEmail1": "几天前，您将网站“%s”添加到您的Matomo Analytics。 我们刚检查过，您的Matomo似乎没有任何此网站的流量记录。",
         "JsTrackingCodeMissingEmail2": "要开始跟踪数据并深入了解用户，您需要在自己的网站或移动应用中设置跟踪功能。 对于网站，只需在%s标记之前嵌入跟踪代码。",
