--- a/plugins/CoreHome/lang/cs.json
+++ b/plugins/CoreHome/lang/cs.json
@@ -106,6 +106,7 @@
         "StandardReport": "Standartní report",
         "FlattenReport": "Srovnat report",
         "ReportWithMetadata": "Report s metadaty",
+        "ReadMoreOnlineGuide": "Další informace o tomto tématu naleznete v online příručce.",
         "SeeAvailableVersions": "Prohlédnout dostupné verze",
         "QuickLinks": "Rychlé odkazy"
     }
