--- a/plugins/CoreHome/lang/zh-cn.json
+++ b/plugins/CoreHome/lang/zh-cn.json
@@ -106,6 +106,7 @@
         "StandardReport": "标准报告",
         "FlattenReport": "展平报告",
         "ReportWithMetadata": "报告元数据",
+        "ReadMoreOnlineGuide": "在线指南中阅读有关此主题的更多信息。",
         "SeeAvailableVersions": "请参阅可用版本",
         "QuickLinks": "快速链接"
     }
