--- a/plugins/CorePluginsAdmin/lang/tr.json
+++ b/plugins/CorePluginsAdmin/lang/tr.json
@@ -20,7 +20,7 @@
         "InfoPluginUpdateIsRecommended": "Son gelişmelerden yararlanmak için uygulama eklerinizi güncelleyin.",
         "InfoThemeIsUsedByOtherUsersAsWell": "Not: Bu Matomo uygulaması üzerinde %1$s kullanıcı daha %2$s temasını kullanıyor.",
         "InfoThemeUpdateIsRecommended": "Temanızı güncelleyerek son sürümün tadını çıkarın.",
-        "InstallNewPlugins": "Yeni eklenti kur",
+        "InstallNewPlugins": "Yeni uygulama eki kur",
         "InstallNewThemes": "Yeni tema kur",
         "LicenseHomepage": "Lisans Sayfası",
         "LikeThisPlugin": "Bu uygulama ekini beğendiniz mi?",
