--- a/plugins/Feedback/lang/zh-cn.json
+++ b/plugins/Feedback/lang/zh-cn.json
@@ -1,13 +1,47 @@
 {
     "Feedback": {
         "DoYouHaveBugReportOrFeatureRequest": "您有bug报告或要新增功能？",
+        "HowToCreateTicket": "请阅读有关编写良好的%1$s错误报告%2$s或%3$s功能请求%4$s的建议。 然后注册或登录%5$s我们的问题跟踪器%6$s并创建%7$s个新问题%8$s。",
         "IWantTo": "我想要:",
         "LearnWaysToParticipate": "了解所有您可以 %1$s 参与%2$s 的方法",
         "ManuallySendEmailTo": "请手动发送信息至",
+        "PluginDescription": "将您的反馈意见发送给Matomo小组。 分享您的想法和建议，使Matomo成为世界上最好的分析平台！",
+        "PrivacyClaim": "Matomo尊重您的%1$s隐私%2$s，并赋予您对数据的完全控制权。",
+        "RateFeatureLeaveMessageDislike": "得知您不喜欢我们，我们深感抱歉！ 请让我们知道我们如何改进。",
+        "RateFeatureLeaveMessageLike": "我们很高兴您喜欢它！ 请让我们知道您最喜欢的是什么，或者您是否有功能要求。",
+        "RateFeatureSendFeedbackInformation": "您的Matomo平台会向我们（Matomo团队）发送一封电子邮件（包括您的电子邮件地址），因此如果您有任何疑问，我们可以与您联系。",
+        "RateFeatureThankYouTitle": "感谢您对“ %s”的评价！",
+        "RateFeatureTitle": "您喜欢“ %s”功能吗？ 请评分并发表评论",
         "SendFeedback": "提交反馈",
         "ThankYou": "感谢您帮助我们改进 Matomo ！",
         "TopLinkTooltip": "告诉我们您的想法，或者寻求专业技术支持。",
+        "ViewAnswersToFAQ": "查看%1$s个常见问题的答案%2$s",
+        "FAQs": "常见问题",
+        "ViewUserGuides": "通过我们的%1$s用户指南%2$s了解如何配置Matomo以及如何有效地分析数据",
+        "UserGuides": "用户指南",
+        "CommunityHelp": "社区帮助",
+        "ProfessionalHelp": "专业的帮助",
+        "ProfessionalServicesIntro": "通过Matomo内部支持订阅，我们经验丰富的团队可以在线帮助您利用Matomo Analytics来发展业务。",
+        "ProfessionalServicesOfferIntro": "您可以从哪些服务中受益？",
+        "ProfessionalServicesDedicatedSupport": "Matomo专业团队成员的支持",
+        "ProfessionalServicesOnboarding": "入职调查表并与Matomo支持成员会面",
+        "ProfessionalServicesSupport": "24小时\/7全天候在线服务",
+        "ProfessionalServicesTraining": "独家观看Matomo培训视频",
+        "ProfessionalServicesEmailAlerts": "有关Matomo安全发布的电子邮件警报",
         "ContactUs": "联系我们",
-        "Forums": "论坛"
+        "VisitTheForums": "访问%1$s论坛%2$s并从Matomo用户社区获得帮助",
+        "Forums": "论坛",
+        "ReviewMatomoTitle": "相信Matomo？",
+        "PleaseLeaveExternalReviewForMatomo": "在其中一个站点上分享您的想法，并激发其他人加入我们的数据革命。",
+        "RemindMeLater": "稍后提醒我",
+        "NeverAskMeAgain": "再也不问我",
+        "HowCanWeHelp": "我们能帮你什么吗？",
+        "NotTrackingVisits": "Matomo不会跟踪任何访问",
+        "TrackMultipleSites": "我需要跟踪多个站点或子域",
+        "RemoveOtherLabel": "我想查看我的“其他”数据",
+        "PurgeOldData": "我想删除一些旧数据",
+        "SearchHelpResources": "搜索matomo.org帮助资源",
+        "PopularHelpTopics": "热门帮助主题",
+        "SearchOnMatomo": "在Matomo.org上搜索“ %1$s”"
     }
 }
