--- a/plugins/PrivacyManager/lang/tr.json
+++ b/plugins/PrivacyManager/lang/tr.json
@@ -32,9 +32,21 @@
         "AskForConsentStep3DescBDesc2": "Bununla kullanıcının JavaScript izleyiciye onay verdiği bilinir ve izleme olması gerektiği gibi çalışır. Bu işlev %1$s sonrasında çağrılmalıdır.",
         "AskForConsentStep3DescBNote1": "%1$s işlevini çağırdığınızda, Matomo sonraki isteklerde bu kullanıcının onay verdiğini hatırlamaz: her sayfada setConsentGiven  işlevini çağırmanız önemlidir.",
         "AskForConsentStep3DescBNote2": "kullanıcı onay verdiğinde, öncelikle %1$s işlevini çağırmaktan kaçınmanız gerekir.",
-        "AskForConsentStep4DescA": "A) Matomo tarafından verilmiş onayın hatırlanmasına izin veriyorsanız",
+        "AskForConsentStep4": "4. Adım: Kullanıcı onayını geri alır",
+        "AskForConsentStep4Desc": "Kullanıcının, onayını kaldırmak için belirli bir işlem yapması gerekir. Örneğin: \"Artık izlenmek istemiyorum\" gibi bir düğmeye tıklar.",
+        "AskForConsentStep4DescA": "A) Verilmiş onayın Matomo tarafından hatırlanmasını istiyorsanız",
+        "AskForConsentStep4DescADesc": "Kullanıcı artık onay vermediğini belirttiğinde, şu yöntemi bir kez çağırmanız gerekir:",
+        "AskForConsentStep4DescADesc2": "Bu işlem verilmiş onayın hatırlanmasını sağlayan çerezi siler.",
         "AskForConsentStep4DescB": "B) Onayın hatırlanması için kendi onay aracınızı kullanıyorsanız",
+        "AskForConsentStep4DescBDesc": "Kullanıcı artık onay vermediğini belirttiğinde, şu yöntemi artık çağırmamalısınız:",
         "AskForConsentStepNotes": "Notlar:",
+        "AnonymizeSites": "Şu sitelerin verileri anonimleştirilsin",
+        "AnonymizeRowDataFrom": "Şu tarihten sonraki tüm ham veriler anonim kılınsın:",
+        "AnonymizeRowDataTo": "Şu tarihten önceki tüm ham veriler anonim kılınsın:",
+        "AnonymizeIp": "IP Adresi Anonim Kılınsın",
+        "AnonymizeIpHelp": "Bu işlem geri alınamaz. Bu seçenek etkinleştirildiğinde, bu sürede yapılan tüm ziyaretlerin IP adresleri '192.168.xxx.xxx' gibi en az 2 bayt kullanılarak anonim kılınır. Anonim kılmak seçeneğini 3 bayt olarak yapılandırdıysanız, bu ayara uyulur ve tüm IP adresleri 3 bayt kullanılarak anonim kılınır.",
+        "AnonymizeLocation": "Konum Anonim Kılınsın",
+        "AnonymizeLocationHelp": "Bu işlem geri alınamaz. Konum, anonim kılınmış IP adresine göre yeniden değerlendirilir (IP adresinin en az 2 baytı anonim kılınır).",
         "AnonymizeUserId": "Kullanıcı Kodu Sahte Kullanıcı Koduna Dönüştürülsün",
         "CurrentDBSize": "Geçerli veritabanı boyutu",
         "DBPurged": "Veritabanı temizlendi.",
