--- a/plugins/SitesManager/lang/pt.json
+++ b/plugins/SitesManager/lang/pt.json
@@ -34,6 +34,10 @@
         "GlobalListExcludedUserAgents_Desc": "Se o identificador de agente de utilizador do visitante contiver qualquer um dos identificadores que especificar, o visitante será excluído do Matomo.",
         "GlobalSettings": "Definições globais",
         "GlobalWebsitesSettings": "Definições globais de sites",
+        "InstallationGuides": "Guias de instalação",
+        "InstallationGuidesIntro": "Nós fornecemos guias passo-a-passo que explicam como incorporar o código de acompanhamento para alguns dos CMS e construtores de sites mais populares.",
+        "ExtraInformationNeeded": "Para configurar o Matomo no seu sistema, pode necessitar da seguinte informação:",
+        "Integrations": "Integrações",
         "HelpExcludedIpAddresses": "Introduza a lista de IPs, um por linha, que gostaria de excluir de serem acompanhados pelo Matomo. Pode utilizar a notação CIDR, por exemplo %1$s, ou pode utilizar carateres genéricos, por exemplo %2$s ou %3$s",
         "JsTrackingTagHelp": "Aqui está o código de acompanhamento JavaScript a incluir em todas as suas páginas",
         "KeepURLFragments": "Acompanhamento de fragmentos de endereços de páginas",
