--- a/plugins/VisitFrequency/lang/pt.json
+++ b/plugins/VisitFrequency/lang/pt.json
@@ -1,25 +1,27 @@
 {
     "VisitFrequency": {
-        "ColumnActionsByNewVisits": "Ações por Novas Visitas",
+        "ColumnActionsByNewVisits": "Ações por novas visitas",
         "ColumnActionsByReturningVisits": "Ações das visitas recorrentes",
-        "ColumnAverageVisitDurationForNewVisitors": "Média de Duração de uma Nova Visita (em segundos)",
+        "ColumnAverageVisitDurationForNewVisitors": "Média de duração de uma nova visita (em segundos)",
         "ColumnAverageVisitDurationForReturningVisitors": "Duração média de uma visita recorrente (em segundos)",
-        "ColumnAvgActionsPerNewVisit": "Média de Ações por Nova Visita",
+        "ColumnAvgActionsPerNewVisit": "Média de ações por nova visita",
         "ColumnAvgActionsPerReturningVisit": "Média de ações por visita recorrente",
         "ColumnBounceCountForReturningVisits": "Total de ressalto para visitas recorrentes",
+        "ColumnBounceRateForNewVisits": "Taxa de ressalto para novas visitas",
         "ColumnBounceRateForReturningVisits": "Taxa de ressalto por visitas recorrentes",
         "ColumnMaxActionsInReturningVisit": "Máximo de ações numa visita recorrente",
         "ColumnNbReturningVisitsConverted": "Número de conversões de visitas recorrentes",
-        "ColumnNewVisits": "Novas Visitas",
+        "ColumnNewVisits": "Novas visitas",
         "ColumnReturningVisits": "Visitas recorrentes",
         "ColumnSumVisitLengthReturning": "Tempo total despendido por visitantes recorrentes (em segundos)",
         "ColumnUniqueNewVisitors": "Novos visitantes únicos",
         "ColumnUniqueReturningVisitors": "Visitantes recorrentes únicos",
-        "ColumnNewUsers": "Novos Utilizadores",
+        "ColumnNewUsers": "Novos utilizadores",
         "ColumnReturningUsers": "Utilizadores recorrentes",
         "NewActions": "ações por novas visitas",
         "NewAverageVisitDuration": "duração média da visita para novos visitantes",
         "NewAvgActions": "ações por nova visita",
+        "NewBounceRate": "novas visitas que ressaltaram (que saíram do site após uma página)",
         "NewVisits": "novas visitas",
         "PluginDescription": "Apresenta métricas sobre os novos visitantes e visitantes recorrentes",
         "ReturnActions": "ações por visitas recorrentes",
