--- a/plugins/CoreAdminHome/lang/da.json
+++ b/plugins/CoreAdminHome/lang/da.json
@@ -113,6 +113,7 @@
         "YouMayOptOut3": "Hvis du gør det, beskytter du dit privatliv, men du forhindrer også ejeren af websitet fra at lære af dine handlinger, og dermed blive i stand til at forbedre brugeroplevelsen for dig og andre brugere.",
         "UncheckToOptOut": "Fjern markering for at vælge.",
         "CheckToOptIn": "Sæt markering for at vælge.",
+        "OptOutErrorNoCookies": "Tracking tilvalgs-feature kræver, at cookies er aktiveret",
         "MissingTrackingCodeEmailSubject": "Ingen trafik for %s er registreret i Matomo Analytics. Kom i gang nu",
         "JsTrackingCodeMissingEmail1": "For få dage siden tilføjede du websitet '%s' til din Matomo Analytics. Vi tjekkede lige og det ser ikke ud til at din Matomo registrerer nogen trafik fra dette website.",
         "JsTrackingCodeMissingEmail2": "For at påbegynde tracking og få indsigt i dine brugere, er det nødvendigt at tilslutte tracking til dit website eller mobil-app. For websites skal du blot tilføje trackingkoden lige før %s-taggen.",
