--- a/plugins/CorePluginsAdmin/lang/zh-cn.json
+++ b/plugins/CorePluginsAdmin/lang/zh-cn.json
@@ -65,8 +65,15 @@
         "TagManagerTeaserHideNonSuperUser": "不感兴趣，不再显示此页面",
         "TagManagerTeaserEmailSuperUserBody": "嗨，%1$sMatomo标签管理器现在在Matomo中可用，我很想使用此新功能。 拥有超级管理员访问权限后，您可以通过顶部菜单中的标签管理器页面激活此功能吗？%2$sMatomo URL是%3$s。%4$s谢谢！",
         "WhatIsTagManager": "什么是标签管理器？",
+        "WhatIsTagManagerDetails1": "与内容管理系统（CMS）一样，您无需具备HTML \/ CSS的技术知识即可灵活地为网站发布内容，标签管理系统（TMS）是简化简化先嵌入和后嵌入过程的最佳选择。 网站上的第三方应用程序跟踪标记（也称为代码段或像素）。",
+        "WhatIsTagManagerDetails2": "假设您想查看转换\/目标，实时通讯注册，社交小部件，退出弹出窗口和再营销广告系列的结果； 曾经是高度技术和费时的过程，现在可以在TMS中轻松完成，只需单击几下即可实现。",
+        "TagManagerLearnMoreInUserGuide": "在标签管理器用户指南中了解更多信息",
         "WhyUsingATagManager": "为什么要使用标签管理器？",
+        "WhyUsingATagManagerDetails1": "标记管理器使您的生活更轻松！ 您不再需要等待开发人员修改网站上的任何第一方或第三方摘要，因为标签管理器可为您带来轻松无忧的体验，以进行这些更改并自行部署您的网站。",
+        "WhyUsingATagManagerDetails2": "它再方便不过了，它不仅可以让您更快地将更改引入市场，还可以降低成本。",
+        "WhyUsingATagManagerDetails3": "这使营销团队，数字团队和IT人士感到高兴……这对每个人都是双赢！",
         "AreThereAnyRisks": "是否有任何风险？",
+        "AreThereAnyRisksDetails1": "激活标签管理器后，具有管理员访问权限的用户将能够创建自定义HTML标签，触发器和变量，这些HTML，触发器和变量可能会在您的网站上执行JavaScript。 这些自定义模板可能被滥用，例如从您的网站访问者那里窃取敏感信息（称为%1$s，称为XSS%2$s）。",
         "AreThereAnyRisksDetails2": "在您激活标签管理器后，可以在“管理=>常规设置”下禁用这些自定义模块。 或者，您也可以将这些模板的使用限制为仅特定用户或超级管理员用户。",
         "Theme": "主题",
         "Themes": "主题",
