--- a/plugins/DevicePlugins/lang/tr.json
+++ b/plugins/DevicePlugins/lang/tr.json
@@ -1,10 +1,10 @@
 {
     "DevicePlugins": {
-        "BrowserWithNoPluginsEnabled": "%1$s için bir eklenti yüklenmemiş",
-        "BrowserWithPluginsEnabled": "%1$s için %2$s eklenti yüklenmiş",
-        "PluginDescription": "Ziyaretçilerin web tarayıcıları tarafından desteklenen eklentilerin listesini görüntüler.",
-        "PluginDetectionDoesNotWorkInIE": "Not: Eklenti algılaması Internet Explorer 11 öncesindeki sürümleri desteklemez. Bu raporda yalnız IE dışındaki tarayıcılar ve yeni IE tarayıcıları için veriler bulunur.",
-        "WidgetPlugins": "Tarayıcı Eklentileri",
-        "WidgetPluginsDocumentation": "Bu raporda ziyaretçilerinizin web tarayıcılarında hangi eklentilerin etkin olduğu görüntülenir. Bu bilgiler içeriğinizi doğru şekilde sunmanız için önemli olabilir."
+        "BrowserWithNoPluginsEnabled": "%1$s uygulama ekleri etkinleştirilmemiş olarak",
+        "BrowserWithPluginsEnabled": "%1$s, %2$s uygulama ekleri etkinleştirilmiş olarak",
+        "PluginDescription": "Ziyaretçilerin web tarayıcıları tarafından desteklenen uygulama eklerinin listesini görüntüler.",
+        "PluginDetectionDoesNotWorkInIE": "Not: Uygulama eki algılaması Internet Explorer 11 öncesindeki sürümleri desteklemez. Bu raporda yalnız IE dışındaki tarayıcılar ve yeni IE tarayıcıları için veriler bulunur.",
+        "WidgetPlugins": "Tarayıcı Uygulama Ekleri",
+        "WidgetPluginsDocumentation": "Bu raporda ziyaretçilerinizin web tarayıcılarında hangi uygulama eklerinin etkin olduğu görüntülenir. Bu bilgiler içeriğinizi doğru şekilde sunmanız için önemli olabilir."
     }
 }
