--- a/plugins/Diagnostics/lang/pt.json
+++ b/plugins/Diagnostics/lang/pt.json
@@ -1,6 +1,8 @@
 {
     "Diagnostics": {
         "ConfigFileTitle": "Ficheiro de configuração",
+        "MysqlTemporaryTablesWarning": "A permissão MySQL CREATE TEMPORARY TABLES é necessária para que o Matomo funcione corretamente.",
+        "MysqlTransactionLevel": "A alteração do nível de isolamento da transação não é suportado. O arquivamento irá funcionar mas será mais lento e é recomendável que altere, por exemplo, o `binlog_format` para `row`, se for possível.",
         "MysqlMaxPacketSize": "Tamanho máximo do pacote",
         "MysqlMaxPacketSizeWarning": "É recomendável a configuração de um tamanho de pacote 'max_allowed_packet' na sua base de dados MySQL de, pelo menos, %1$s. Atualmente está configurado como %2$s.",
         "ConfigFileIntroduction": "Aqui, pode consultar a configuração do Matomo. Se estiver a executar o Matomo num ambiente distribuído, a página pode ser diferente mediante o servidor a partir do qual foi carregada. As linhas com uma cor de fundo diferente são valores alterados de configuração especificados, por exemplo, no ficheiro %1$s.",
