--- a/plugins/GeoIp2/lang/pt-br.json
+++ b/plugins/GeoIp2/lang/pt-br.json
@@ -41,6 +41,7 @@
         "LocationProviderDesc_Php_WithExtension": "Este provedor de localização é acelerado pela extensão %1$s maxminddb %2$s.",
         "LocationProviderDesc_ServerModule": "Este provedor de localização usa o módulo GeoIP2 que foi instalado no seu servidor HTTP. Este provedor é rápido e preciso, mas %1$ssó pode ser usado com o rastreamento normal do navegador. %2$s",
         "LocationProviderDesc_ServerModule2": "Se você precisa importar arquivos de log ou fazer algo que requeira definir endereços IP, use a implementação %3$s GeoIP2 PHP %4$s e instale a extensão %1$s maxminddb %2$s.",
+        "NotManagingGeoIPDBs": "No momento o Matomo não está gerenciando nenhuma base de dados DBIP ou MaxMind.",
         "UnsupportedArchiveType": "Encontrado tipo de arquivo não suportado %1$s.",
         "UpdaterHasNotBeenRun": "O atualizador nunca foi executado.",
         "UpdaterIsNotScheduledToRun": "Não está agendado para ser executado no futuro.",
