--- a/plugins/GeoIp2/lang/tr.json
+++ b/plugins/GeoIp2/lang/tr.json
@@ -2,7 +2,7 @@
     "GeoIp2": {
         "AssumingNonApache": "apache_get_modules işlevi bulunamadığı için web sunucusunun Apache olmadığı varsayılıyor.",
         "CannotFindGeoIPDatabaseInArchive": "%1$s tar arşivi dosyasında geçerli bir DB-IP \/ GeoIP veritabanı bulunamadı!",
-        "CannotFindGeoIPServerVar": "%s değişkeni ayarlanmamış. Sunucunuz doğru yapılandırılmamış.",
+        "CannotFindGeoIPServerVar": "%s değişkeni ayarlanmamış. Sunucunuz doğru yapılandırılmamış olabilir.",
         "CannotListContent": "%1$s: %2$s içeriği listelenemedi",
         "CannotSetupGeoIPAutoUpdating": "Coğrafi konum veritabanlarını Matomo dışında bir konumda bulunduruyorsunuz gibi görünüyor (bunu misc alt klasöründe herhangi bir veritabanı bulunmadığı halde coğrafi konum özelliğinin çalışıyor olduğuna bakarak söyleyebiliyoruz). Matomo, misc klasörünün dışında bulunan coğrafi konum veritabanlarını güncelleyemez.",
         "CannotUnzipGeoIPFile": "%1$s içindeki GeoIP arşivi dosyası ayıklanamadı: %2$s",
@@ -12,7 +12,7 @@
         "FoundApacheModules": "Matomo şu Apache modüllerini buldu.",
         "GeoIPImplHasAccessTo": "GeoIP uygulaması şu türdeki veritabanlarına erişebilir",
         "GeoIPDatabases": "GeoIP Veritabanları",
-        "GeoIPLocationProviderDesc_ServerBasedAnonWarn": "Not: IP adresini anonim kılmanın bu hizmet sağlayıcı tarafından rapor edilen konumlar üzerinde bir etkisi yoktur. IP adresini anonim kılmadan önce bu durumun uymak zorunda olduğunuz kişisel veri güvenliği yasalarına aykırı olmadığından emin olun.",
+        "GeoIPLocationProviderDesc_ServerBasedAnonWarn": "Not: IP adresini anonim kılmanın bu hizmet sağlayıcı tarafından bildirilen konumlar üzerinde bir etkisi yoktur. IP adresini anonim kılmadan önce bu durumun uymak zorunda olduğunuz kişisel veri güvenliği yasalarına aykırı olmadığından emin olun.",
         "GeoIPLocationProviderNotRecommended": "Coğrafi konum bulma çalışıyor ancak önerilen hizmet sağlayıcılardan birini kullanmıyorsunuz.",
         "GeoIPNoDatabaseFound": "Bu GeoIP uygulaması herhangi bir veritabanı bulamadı.",
         "GeoIPNoServerVars": "Matomo herhangi bir GeoIP %s değişkeni bulamadı.",
@@ -26,9 +26,9 @@
         "HowToSetupGeoIP_Step2": "Bu dosyayı ayıklayın ve çıkanları Matomo %2$smisc%3$s klasörü %1$s içine kopyalayıp adını %4$s olarak değiştirin (bunu FTP ya da SSH ile yapabilirsiniz).",
         "HowToSetupGeoIP_Step3": "Bu sayfayı yeniden yükleyin. Şimdi %1$sDB-IP \/ GeoIP (PHP)%2$s hizmet sağlayıcısı %3$skurulacak%4$s. Onu seçin.",
         "HowToSetupGeoIP_Step4": "İşlem tamam! Matomo için DB-IP uygulamasını ayarladınız. Böylece ziyaretçilerinizin geldiği ülkeleri büyük doğrulukla belirlerken bunun yanında bölge ve il bilgilerini de görebileceksiniz.",
-        "HowToSetupGeoIPIntro": "Coğrafi konum bulma ayarlarınızın doğruluğu yeterli değil gibi görünüyor. Bu özellik oldukça kullanışlıdır ve düzgün çalışmadığında ziyaretçileriniz hakkında doğru ve tam konum bilgisi alamazsınız. Hızlıca kullanmaya başlamak için gerekli bilgileri şurada bulabilirsiniz:",
+        "HowToSetupGeoIPIntro": "Coğrafi konum bulma ayarlarınızın doğruluğu yeterli değil gibi görünüyor. Bu özellik oldukça kullanışlıdır ve düzgün çalışmadığında ziyaretçileriniz hakkında tam ve doğru konum bilgisi alamazsınız. Hızlıca kullanmaya başlamak için gerekli bilgileri şurada bulabilirsiniz:",
         "HowToInstallApacheModule": "Apache için GeoIP modülü nasıl kurulur?",
-        "HowToInstallNginxModule": "Nginx için GeoIP modülünü nasıl kurulur?",
+        "HowToInstallNginxModule": "Nginx için GeoIP modülü nasıl kurulur?",
         "HttpServerModule": "HTTP Sunucu Modülü",
         "InvalidGeoIPUpdatePeriod": "GeoIP güncelleme sıklığı geçersiz: %1$s. Geçerli değerler şunlardır: %2$s.",
         "IPurchasedGeoIPDBs": "Daha doğru %3$sDB-IP%4$s ya da %1$sMaxMind%2$s veritabanları satın aldım ve otomatik güncellemeleri kurmak istiyorum.",
@@ -41,11 +41,12 @@
         "LocationProviderDesc_Php_WithExtension": "Bu konum hizmeti sağlayıcısı %1$smaxminddb%2$s eklentisi kurularak hızlandırılmıştır.",
         "LocationProviderDesc_ServerModule": "Bu konum hizmeti sağlayıcısı HTTP sunucunuz üzerine kurulmuş GeoIP 2 modülünü kullanır. Bu hizmet sağlayıcı hızlı ve doğrudur ancak %1$syalnız normal web tarayıcı izlemesi ile kullanılabilir%2$s.",
         "LocationProviderDesc_ServerModule2": "Günlük dosyalarını içe aktarmak ya da IP adresinin ayarlanmasını gerektiren başka bir işlem yapmak zorundaysanız, %3$sPHP GeoIp 2 uygulamasını%4$s kullanarak %1$smaxminddb eklentisini%2$s kurun.",
+        "NotManagingGeoIPDBs": "Matomo şu anda herhangi bir DB-IP ya da Maxmind veritabanını yönetmiyor.",
         "UnsupportedArchiveType": "Desteklenmeyen %1$s arşiv türü bulundu.",
         "UpdaterHasNotBeenRun": "Güncelleyici henüz hiç çalışmamış.",
         "UpdaterIsNotScheduledToRun": "Gelecekte çalışmak üzere ayarlanmamış.",
         "UpdaterScheduledForNextRun": "core:archive komutunun yürütüleceği zamanlanmış görevin bir sonraki çalışmasında güncellenecek.",
-        "UpdaterWasLastRun": "Güncelleyici en son %s zamanında çalıştı.",
+        "UpdaterWasLastRun": "Güncelleyici en son %s zamanında çalışmış.",
         "UpdaterWillRunNext": "Zamanlanmış görev %s zamanında çalışacak.",
         "ShowCustomServerVariablesConfig": "GeoIP 2 sunucu modülünü (Nginx, Apache...) kullanacağım ve sunucu ayarlarını yapılandırmak istiyorum",
         "ServerBasedVariablesConfiguration": "GeoIP 2 sunucu modülleri tarafından kullanılan sunucu değişkeni yapılandırması",
