--- a/plugins/PrivacyManager/lang/it.json
+++ b/plugins/PrivacyManager/lang/it.json
@@ -22,11 +22,31 @@
         "AskForConsentStep3": "Passo 3: l'utente dà il consenso",
         "AskForConsentStep3Desc": "Una volta che l'utente ha dato il consenso, puoi A) lasciare che Matomo ricordi il consenso o B) utilizzare il tuo strumento di consenso per ricordare il consenso. Presentiamo di seguito le due soluzioni:",
         "AskForConsentStep3DescA": "A) se vuoi lasciare che Matomo ricordi il consenso",
+        "AskForConsentStep3DescADesc1": "Una volta che un utente avrà dato il proprio consenso, è possibile far ricordare a Matomo che l'utente lo ha fatto semplicemente chiamando il seguente metodo dopo che l'utente ha dato il proprio consenso:",
+        "AskForConsentStep3DescADesc2": "Matomo ricorderà quindi nelle successive richieste che l'utente ha dato il proprio consenso impostando un cookie denominato \"consenso\". Finché esisterà questo cookie, Matomo saprà che è stato dato il consenso e elaborerà automaticamente i dati. Ciò significa che è necessario chiamare %1$s una sola volta e non è necessario chiamare %2$s per tutte le visualizzazioni di pagina.",
+        "AskForConsentStep3DescANote1": "Per impostazione predefinita, il cookie e il consenso saranno ricordati per sempre. È possibile definire un periodo di scadenza opzionale per il consenso dell'utente chiamando:",
+        "AskForConsentStep3DescANote2": "Quando stai monitorando più sottodomini nello stesso sito Web in Matomo, vuoi assicurarti che quando chiedi il Consenso, l'utente fornisca il consenso per tutti i sottodomini su cui stai raccogliendo dati. Se l'utente fornisce il consenso solo per un determinato dominio o sottodomini, potrebbe essere necessario limitare o ampliare l'ambito del dominio e del percorso dei cookie di consenso utilizzando 'setCookieDomain' e 'setCookiePath' (ulteriori informazioni nella guida di JavaScript sul tracking).",
+        "AskForConsentStep3DescANote3": "È necessario che tu non disabiliti i cookies.",
         "AskForConsentStep3DescB": "B) se si utilizza il proprio strumento di consenso per ricordare il consenso",
+        "AskForConsentStep3DescBDesc1": "In alcuni casi, si registra l'informazione che l'utente ha dato il consenso per essere tracciato direttamente nel proprio sistema o CMS (ad esempio quando si utilizza il proprio cookie per ricordare il consenso dell'utente). Una volta ottenuto il consenso dell'utente per l'elaborazione dei propri dati, è necessario chiamare il metodo 'setConsentGiven':",
+        "AskForConsentStep3DescBDesc2": "Ciò consente al tracker JavaScript di sapere che l'utente ha dato il consenso e garantisce che il tracking funzioni come previsto. Questa funzione deve essere chiamata in qualsiasi momento dopo %1$s.",
+        "AskForConsentStep3DescBNote1": "quando chiami, %1$s Matomo non ricorderà nelle successive richieste che questo utente ha dato il consenso: è importante chiamare setConsentGiven su ogni pagina.",
+        "AskForConsentStep3DescBNote2": "quando l'utente ha dato il consenso, puoi anche evitare di chiamare %1$s in primo luogo.",
+        "AskForConsentStep4": "Passo 4: l'utente rimuove il consenso",
+        "AskForConsentStep4Desc": "Per rimuovere il suo consenso, l'utente deve eseguire un'azione specifica, ad esempio: facendo clic su un pulsante \"Non voglio più essere tracciato\".",
         "AskForConsentStep4DescA": "A) se vuoi lasciare che Matomo ricordi il consenso",
+        "AskForConsentStep4DescADesc": "Quando l'utente ha espresso di non voler più dare il proprio consenso, è necessario chiamare una volta il seguente metodo:",
+        "AskForConsentStep4DescADesc2": "Ciò assicura che il cookie che ricorda il consenso dato venga eliminato.",
         "AskForConsentStep4DescB": "B) se si utilizza il proprio strumento di consenso per ricordare il consenso",
         "AskForConsentStep4DescBDesc": "Quando l'utente ha espresso che non dà più il consenso, non dovrai più chiamare il seguente metodo:",
         "AskForConsentStepNotes": "Note:",
+        "AnonymizeSites": "Rendi anonimi i dati di questo sito",
+        "AnonymizeRowDataFrom": "Rendi anonimi tutti i dati grezzi a partire da:",
+        "AnonymizeRowDataTo": "Rendi anonimi tutti i dati grezzi fino a:",
+        "AnonymizeIp": "Rendi anonimi gli IP",
+        "AnonymizeIpHelp": "Questa azione non può essere annullata. Se abilitato, per tutte le visite durante questo periodo di tempo l'IP verrà reso anonimo di almeno 2 byte, ad esempio \"192.168.xxx.xxx\". Se al momento è stato configurato per rendere anonimi 3 byte, questa impostazione verrà rispettata e tutti gli IP saranno resi anonimi di 3 byte.",
+        "AnonymizeLocation": "Rendi anonima la Posizione",
+        "AnonymizeLocationHelp": "Questa azione non può essere annullata. Rivaluta la posizione in base all'IP anonimo (almeno 2 byte dell'IP saranno resi anonimi).",
         "AnonymizeUserId": "Sostituisci l'ID Utente con uno pseudonimo",
         "CurrentDBSize": "Dimensione corrente del database",
         "DBPurged": "DB ripulito.",
