--- a/plugins/Actions/lang/el.json
+++ b/plugins/Actions/lang/el.json
@@ -57,6 +57,8 @@
         "SiteSearchCategories": "Κατηγορίες (Αναζήτηση ιστοτόπου)",
         "SiteSearchKeyword": "Λέξη κλειδί (Αναζήτηση ιστοτόπου)",
         "SiteSearchKeywords": "Λέξεις κλειδιά (Αναζήτηση ιστοτόπου)",
+        "SiteSearchKeywordCount": "Εμφάνιση λέξης κλειδιού (Αναζήτηση ιστοτόπου)",
+        "SiteSearchKeywordCounts": "Εμφανίσεις λέξεων κλειδιών (Αναζήτηση ιστοτόπου)",
         "SiteSearchKeywordsDocumentation": "Η παρούσα αναφορά απαριθμεί τις λέξεις-κλειδιά αναζήτησης που έψαξαν οι επισκέπτες στην εσωτερική μηχανή αναζήτησης σας.",
         "SiteSearchKeywordsNoResultDocumentation": "Η παρούσα αναφορά παραθέτει τις λέξεις-κλειδιά αναζήτησης που δεν επιστρέψαν κανένα αποτέλεσμα αναζήτησης: ίσως ο αλγόριθμος της μηχανής αναζήτησης μπορεί να βελτιωθεί ή ίσως οι επισκέπτες σας ψάχνουν για περιεχόμενο που δεν είναι (ακόμη) στην ιστοσελίδα σας;",
         "SubmenuPagesEntry": "Σελίδες εισόδου",
