--- a/plugins/PrivacyManager/lang/pt.json
+++ b/plugins/PrivacyManager/lang/pt.json
@@ -28,14 +28,24 @@
         "AskForConsentStep3DescANote2": "Quando está a acompanhar múltiplos sub-domínios no mesmo site no Matomo, tem de garantir que quando pede o consentimento, o utilizador dá o consentimento para todos os sub-domínios nos quais está a recolher dados. Se o utilizador apenas fornece o consentimento para determinado(s) domínio(s) ou sub-domínio(s), pode necessitar de restringir ou alargar o âmbito do domínio e caminho da cookie de consentimento utilizando 'setCookieDomain' e ‘setCookiePath' (saber mais no guia de acompanhamento por JavaScript).",
         "AskForConsentStep3DescANote3": "A não desativação de cookies é obrigatória.",
         "AskForConsentStep3DescB": "B) se utiliza a sua própria ferramenta de consentimento para guardar o consentimento",
+        "AskForConsentStep3DescBDesc1": "Em alguns casos, pode guardar a informação que o utilizador deu o consentimento para ser acompanhado diretamente no seu próprio sistema ou CMS (por exemplo, quando utiliza a sua própria cookie para registar o consentimento do utilizador). Assim que tiver o consentimento do utilizador para processar os seus dados, necessita de invocar o método 'setConsentGiven':",
+        "AskForConsentStep3DescBDesc2": "Isto irá informar o JavaScript de acompanhamento que o utilizador deu o seu consentimento e garantir que o acompanhamento está a funcionar como é suposto. Esta função tem de ser invocada em qualquer altura após %1$s.",
+        "AskForConsentStep3DescBNote1": "quando invocar %1$s, o Matomo não irá memorizar em pedidos subsequentes que este utilizador deu o consentimento: é importante que invoque setConsentGiven em todas as páginas.",
+        "AskForConsentStep3DescBNote2": "quando o utilizador deu o consentimento, pode também evitar invocar %1$s em primeiro lugar.",
+        "AskForConsentStep4": "Passo 4: o utilizar retira o consentimento",
+        "AskForConsentStep4Desc": "Para retirar o seu consentimento, o utilizador necessita de executar uma ação específica, por exemplo: clicar num botão \"Eu não quero deixar de ser monitorizado\".",
         "AskForConsentStep4DescA": "A) se quiser que o Matomo memorize a opção de consentimento",
+        "AskForConsentStep4DescADesc": "Quando o utilizador expressar o desejo de retirar o consentimento, deve invocar uma vez o seguinte método:",
+        "AskForConsentStep4DescADesc2": "Isto garante que a cookie que regista o consentimento do utilizador é eliminada.",
         "AskForConsentStep4DescB": "B) se utiliza a sua própria ferramenta de consentimento para guardar o consentimento",
+        "AskForConsentStep4DescBDesc": "Quando o utilizador expressar o desejo de retirar o consentimento, deve deixar de invocar o seguinte método:",
         "AskForConsentStepNotes": "Notas:",
         "AnonymizeSites": "Anonimizar os dados deste(s) site(s)",
         "AnonymizeRowDataFrom": "Anonimizar todos os dados em bruto a começar em:",
         "AnonymizeRowDataTo": "Anonimizar todos os dados em bruto até:",
         "AnonymizeIp": "Anonimizar IP",
         "AnonymizeIpHelp": "Esta ação não pode ser anulada. Se ativada, para todas as visitas durante este período, o IP será anonimizado por, pelo menos, 2 bytes (por exemplo, '192.168.xxx.xxx'). Se atualmente tiver configurada a anonimização por 3 bytes, então esta definição será respeitada e todos os IPs serão anonimizados em 3 bytes.",
+        "AnonymizeLocation": "Anonimizar localização",
         "AnonymizeUserId": "Substituir o ID de utilizador por um pseudónimo",
         "CurrentDBSize": "Tamanho atual da base de dados",
         "DBPurged": "Base de dados limpa.",
