--- a/plugins/Tour/lang/zh-cn.json
+++ b/plugins/Tour/lang/zh-cn.json
@@ -2,6 +2,7 @@
     "Tour": {
         "PluginDescription": "通过完成使您熟悉Matomo的挑战，立即成为Matomo专家。",
         "Engagement": "忠诚度",
+        "BrowseMarketplace": "浏览市场",
         "CompletionTitle": "干的不错，加油！"
     }
 }
