--- a/plugins/Goals/lang/zh-cn.json
+++ b/plugins/Goals/lang/zh-cn.json
@@ -64,6 +64,9 @@
         "GoalIsTriggeredWhen": "转化触发条件",
         "GoalName": "转化规则名称",
         "Goals": "转化与收益分析",
+        "NGoals": "%s目标",
+        "NRevenue": "%s收入",
+        "NItems": "%s项目",
         "ManageGoals": "管理目标",
         "GoalsOverview": "目标概览",
         "GoalsOverviewDocumentation": "这是目标转化概览。图形首先显示所有转化总和。%s 在图形下面可以看到每个目标的转化报表，点击波迷你图可放大。",
@@ -89,20 +92,35 @@
         "PluginDescription": "创建转化与收益分析，可让您查看到关于您目标转化率、目标转化收益的报告，您可根据时间、访客特征、关键词等对信息进行更加细致的研判。",
         "ProductCategory": "产品类别",
         "ProductName": "产品名称",
+        "ProductNames": "产品名称",
+        "ProductPrice": "产品价格",
+        "ProductQuantity": "产品数量",
         "Products": "产品",
         "ProductSKU": "产品 SKU",
+        "ProductSKUs": "产品SKU",
         "ReturningVisitorsConversionRateIs": "老访客转化率为 %s",
         "SingleGoalOverviewDocumentation": "这是单个目标转化的概览。%s 点击图形下的迷你图可放大。",
         "ThereIsNoGoalToManage": "%s 没有设定目标",
         "UpdateGoal": "更新目标",
         "URL": "网址",
         "ViewAndEditGoals": "查看并编辑目标",
+        "GoalsBy": "目标数%s",
+        "GoalsAdjective": "目标%s",
         "VisitPageTitle": "访问一个特定的页面标题",
         "VisitsUntilConv": "访问转化",
         "VisitUrl": "访问特定网址(页面或页面组)",
+        "VisitDurationMatchAttr": "停留一定时间",
+        "VisitDuration": "访问持续时间为",
         "WhenVisitors": "当访客",
         "WhereThe": "设置",
         "WhereVisitedPageManuallyCallsJavascriptTrackerLearnMore": "您需要在受访页面或您需要定以触发条件的位置调用名为'trackGoal'的JavaScript函数（%1$s了解更多%2$s）",
-        "YouCanEnableEcommerceReports": "您可以为网站开启%1$s在%2$s页面。"
+        "YouCanEnableEcommerceReports": "您可以为网站开启%1$s在%2$s页面。",
+        "UseEventValueAsRevenue": "使用事件值（如果存在）作为目标转化收入。",
+        "GoalRevenue": "目标收益",
+        "EventValueAsRevenueHelp": "如果您匹配的事件具有收入，并且将该收入作为事件值进行跟踪，则可以启用此选项以将事件值记录为目标转化的收入。 如果您的目标收入不会因每次转化而变化，则可以忽略此选项，而只需在上面设置默认收入即可。",
+        "EventValueAsRevenueHelp2": "注意：如果同时定义了默认目标收入和事件值，则将使用事件值。 如果启用此选项，并且请求中未发送任何事件值，则将使用默认收入（如果已定义）。",
+        "AtLeastMinutes": "至少%1$s分钟。 使用小数来匹配秒，例如，使用%2$s来匹配30秒。",
+        "TimeInMinutes": "时间（分钟）",
+        "ClickToViewThisGoal": "单击以查看此目标。"
     }
 }
