--- a/plugins/Live/lang/zh-cn.json
+++ b/plugins/Live/lang/zh-cn.json
@@ -3,6 +3,7 @@
         "AveragePageGenerationTime": "这个访客的每个页面加载平均花 %1$s。",
         "CalculatedOverNPageViews": "采用这个访客最后 %1$s 个访问页面统计。",
         "ClickToViewMoreAboutVisit": "点击查看关于这次访问的详细信息。",
+        "ClickToViewAllActions": "单击以查看该组的所有详细操作",
         "ConvertedNGoals": "转化了 %s 个目标",
         "FirstVisit": "首次访问",
         "GoalType": "类型",
@@ -11,28 +12,49 @@
         "LastHours": "最后%s小时",
         "LastMinutes": "最后%s分钟",
         "LastVisit": "最后访问",
+        "LinkVisitorLog": "查看详细的访问日志",
         "LoadMoreVisits": "查看更多访问",
+        "LimitedSummary": "此配置文件中的信息总结了最近的%1$s次访问。 该用户总共有更多访问。",
+        "LimitedVisitsShown": "仅显示最后%1$s次访问。 该用户总共有更多访问。",
         "MorePagesNotDisplayed": "该访客访问的更多页面没有显示。",
         "NbVisitor": "1 个访客",
         "NbVisitors": "%s 个访客",
         "NextVisitor": "下一个访问者",
         "NoMoreVisits": "这个访客没有其它的访问了。",
         "PageRefreshed": "这个页面被查看 \/ 刷新的次数。",
+        "PluginDescription": "提供实时访问者日志，并允许您在实时仪表板小部件中实时监视访问者。 该插件还可以让您查看任何给定用户的访客资料。",
         "PreviousVisitor": "前个访客",
         "RealTimeVisitors": "实时访问",
         "RealTimeVisitorCount": "实时访客计数",
         "Referrer_URL": "来源网址",
         "ShowMap": "显示地图",
+        "ActionsAndDuration": "%2$s中的%1$s个动作",
         "SimpleRealTimeWidget_Message": "%1$s 和 %2$s 在最近 %3$s。",
         "ViewVisitorProfile": "查看访客资料",
         "VisitedPages": "访问的页面",
         "RevisitedPages": "被浏览超过一次的页面",
+        "ToggleActions": "切换所有动作的可见性",
+        "TopVisitedPages": "热门访问页面",
+        "VisitsLog": "访问日志",
+        "QueryMaxExecutionTimeExceeded": "该查询花费很长时间才能执行。",
+        "QueryMaxExecutionTimeExceededReasonDateRange": "如果选择的日期范围太大，可能会发生这种情况。 请尝试选择较小的日期范围。",
+        "QueryMaxExecutionTimeExceededReasonSegment": "如果所选的部分与任何访问都不匹配，则可能发生这种情况。 请尝试检查您选择的部分。",
+        "QueryMaxExecutionTimeExceededReasonUnknown": "请再试一遍。 如果重复发生，请与管理员或支持人员联系。",
+        "VisitorLog": "访问日志",
         "VisitorLogDocumentation": "本表显示所选时间段内最新的访客资料，鼠标移到日期上可以查看上次访问时间，%1$s 如果时间段包含今天，您可以实时查看访客! %2$s 这里显示的数据总是实时的，无论是否使用定时处理任务。",
+        "VisitorLogNoDataMessagePurged": "由于启用了对旧原始数据的定期删除且此报告的日期已超过%s天，因此可能已清除了数据。 超级用户可以通过转到管理=>隐私来更改此设置。",
         "VisitorProfile": "访客资料",
         "VisitorsInRealTime": "实时访问",
         "VisitorsLastVisit": "此访客上次访问是%s天前。",
         "VisitsFrom": "%1$s%2$s 次访问%3$s 来自",
+        "VisitSummary": "在网站%3$s上总共花费%1$s%2$s，在%6$s次访问%7$s查看了%4$s页%5$s。",
+        "VisitSummaryWithActionDetails": "在网站%3$s上总共花费%1$s%2$s，在%7$s次访问中进行了%4$s次操作%5$s（%6$s）%8$s。",
+        "RowActionTooltipDefault": "显示按此行部分的访问日志",
+        "RowActionTooltipWithDimension": "显示按此%s部分的访问日志",
+        "RowActionTooltipTitle": "打开分段访问日志",
+        "SegmentedVisitorLogTitle": "访问记录，显示访问次数为%1$s的“%2$s”",
         "OnClickPause": "%s已经开始。点击停止。",
-        "OnClickStart": "%s已经停止。点击开始。"
+        "OnClickStart": "%s已经停止。点击开始。",
+        "ClickToSeeAllContents": "单击以查看每个内容的交互\/印象"
     }
 }
