--- a/plugins/Marketplace/lang/zh-cn.json
+++ b/plugins/Marketplace/lang/zh-cn.json
@@ -7,23 +7,68 @@
         "AddToCart": "加入购物车",
         "AllowedUploadFormats": "您可以通过该页面上传.zip格式的插件或主题。",
         "Authors": "作者",
+        "Browse": "浏览",
+        "LatestMarketplaceUpdates": "最新市场更新",
         "BackToMarketplace": "返回商城",
+        "BrowseMarketplace": "浏览市场",
         "ByXDevelopers": "开发者： %s",
         "CannotInstall": "无法安装",
+        "CannotUpdate": "无法更新",
+        "ClickToCompletePurchase": "点击完成购买。",
+        "CurrentNumPiwikUsers": "您的Matomo当前有%1$s个注册用户。",
+        "ConfirmRemoveLicense": "您确定要删除许可证密钥吗？ 您将不再收到任何已购买插件的更新。",
         "Developer": "程序员",
         "DevelopersLearnHowToDevelopPlugins": "开发者：你可以学习如何扩展和定制 Matomo%1$s开发插件或主题%2$s。",
+        "NoticeRemoveMarketplaceFromReportingMenu": "您可以通过安装%1$s White Label %2$s插件从报告菜单中删除市场。",
         "Marketplace": "商城",
+        "PaidPlugins": "高级功能",
         "FeaturedPlugin": "特色插件",
+        "InstallingNewPluginViaMarketplaceOrUpload": "您可以从Marketplace自动安装%1$s或%2$s以.zip格式上传%3$s%4$s。",
         "InstallingPlugin": "正在安装 %s",
+        "InstallPurchasedPlugins": "安装购买的插件",
         "LastCommitTime": "(最后提交 %s)",
         "LastUpdated": "最后更新",
         "License": "许可证",
+        "LicenseKey": "注册码",
+        "LicenseKeyActivatedSuccess": "许可证密钥已成功激活！",
+        "LicenseKeyDeletedSuccess": "许可证密钥已成功删除。",
+        "Exceeded": "超过",
+        "LicenseMissing": "许可证丢失",
+        "LicenseMissingDeactivatedDescription": "以下插件已被停用，因为您正在使用它们而未获得许可证：%1$s. %2$s要解决此问题，请更新您的许可证密钥，%3$s立即订阅%4$s或停用该插件。",
+        "PluginLicenseMissingDescription": "您无权下载此插件，因为该插件没有许可证。 要解决此问题，请更新您的许可证密钥，获取订阅或卸载插件。",
+        "LicenseExceeded": "超出许可",
+        "LicenseExceededDescription": "由于超过了许可证的授权用户数量，以下插件的许可证不再有效：%1$s. %2$s您将无法下载这些插件的更新。 要解决此问题，请删除一些用户，或者%3$s立即升级订阅%4$s。",
+        "PluginLicenseExceededDescription": "您无权下载此插件。 该插件的许可证不再有效，因为超过了许可证的授权用户数量。 要解决此问题，请删除一些用户或立即升级您的订阅。",
+        "LicenseExpired": "许可证过期",
+        "LicenseExpiredDescription": "以下插件的许可证已过期：%1$s。 %2$s您将不再收到这些插件的任何更新。 要解决此问题，请%3$s立即更新您的订阅%4$s，或者如果不再使用该插件，请停用该插件。",
+        "LicenseRenewsNextPaymentDate": "在下一个付款日期续费",
+        "UpgradeSubscription": "升级订阅",
+        "ViewSubscriptionsSummary": "%1$s查看您的插件订阅。%2$s",
+        "ViewSubscriptions": "查看订阅",
+        "ExceptionLinceseKeyIsExpired": "该许可证密钥已过期。",
+        "ExceptionLinceseKeyIsNotValid": "该许可证密钥无效。",
+        "LicenseKeyIsValidShort": "许可证密钥有效！",
+        "RemoveLicenseKey": "删除许可证密钥",
+        "InstallAllPurchasedPlugins": "一次安装所有购买的插件",
+        "InstallAllPurchasedPluginsAction": "安装并激活%d个购买的插件",
+        "InstallThesePlugins": "这将安装并激活以下插件：",
+        "AllPaidPluginsInstalledAndActivated": "所有付费插件均已成功安装并激活。",
+        "OnlySomePaidPluginsInstalledAndActivated": "某些付费插件未成功安装。",
         "NewVersion": "新版本",
         "NotAllowedToBrowseMarketplacePlugins": "您可以浏览，可以安装定制或扩展您的Matomo平台插件列表。如果你有需要请联系您的管理员。",
         "NotAllowedToBrowseMarketplaceThemes": "就可以浏览可以安装定制Matomo平台的外观的主题列表。如果你有需要请联系您的管理员。",
         "NoPluginsFound": "没有插件",
         "NoThemesFound": "没有布景",
+        "NoSubscriptionsFound": "找不到订阅",
         "NumDownloadsLatestVersion": "最新版本: %s次下载",
+        "OverviewPluginSubscriptions": "插件订阅概述",
+        "OverviewPluginSubscriptionsMissingLicense": "您没有设置许可证密钥。 如果您购买了插件订阅，请转到%1$s Marketplace %2$s并输入许可证密钥。",
+        "OverviewPluginSubscriptionsAllDetails": "要查看所有详细信息或更改订阅，请登录到您的帐户。",
+        "OverviewPluginSubscriptionsMissingInfo": "订阅可能会丢失，例如，如果尚未付款。 在这种情况下，请在几个小时后重试，或与Matomo小组联系。",
+        "NoValidSubscriptionNoUpdates": "订阅过期后，您将不再收到此插件的任何更新。",
+        "PluginSubscriptionsList": "这是与您的许可证密钥关联的订阅列表。",
+        "PaidPluginsNoLicenseKeyIntro": "如果您购买了%1$s个高级付费插件%2$s，请在下面插入收到的许可证密钥。",
+        "PaidPluginsWithLicenseKeyIntro": "已设置有效的许可证密钥。 出于安全原因，我们不在此处显示许可证密钥。 如果您丢失了许可证密钥，请联系Matomo团队。",
         "PluginKeywords": "关键词",
         "PluginUpdateAvailable": "您正在使用的版本号为 %1$s，现在有最新的版本%2$s。",
         "PluginVersionInfo": "%1$s 从 %2$s",
